# InteriorExteriorClassifier

./: LICENSE  README.md  data_fetch.py  fix_images.py  main.py  pyproject.toml  train_model.ipynb  train_test_split.py
data/: videos.csv
